# sedes

./: Cargo.toml  LICENSE  README.md
.github/workflows/: check.yaml
src/: de.rs  fmts.rs  lib.rs  se.rs  sede.rs  util.rs
src/de/: fmt.rs  fs.rs  magical.rs
src/de/fmt/: test.rs
src/se/: fmt.rs  fs.rs  magical.rs  test.rs
src/se/fmt/: test.rs
src/sede/: fmt.rs  fmts.rs  se.rs
src/sede/fmt/: ext_maps.rs
src/sede/se/: magical.rs
