[package]
name = "sedes"
description = "SErialization & DEserialization Simplified"
version = "0.1.0"
edition = "2021"

[dependencies]
bimap = "0.6.3"
color-eyre = "0.6.3"
erased-serde = "0.4.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
toml = { version = "0.8.20", optional = true }
serde_cbor = { version = "0.11", optional = true }
rmp-serde = { version = "1.3.0", optional = true }
bincode = { version = "1.3.3", optional = true }
serde-pickle = { version = "1.2.0", optional = true }
strum = { version = "0.27.0", features = ["derive"] }
cfg-if = "1.0.0"

[features]
default = ["all"]
all = ["json", "yaml", "toml", "cbor", "rmp", "bincode", "pickle"]
json = ["dep:serde_json"]
yaml = ["dep:serde_yaml"]
toml = ["dep:toml"]
cbor = ["dep:serde_cbor"]
rmp = ["dep:rmp-serde"]
bincode = ["dep:bincode"]
pickle = ["dep:serde-pickle"]
